# c_template

./: CMakeLists.txt  README.md  main.c
include/: example.h
src/: example.c
